Extend validation No separate csrf token for FormField Flash message after form validation

--- a/src/shopping_list/templates/base.html
+++ b/src/shopping_list/templates/base.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <div>Go to:
-        <a href="{{ url_for('view_index') }}">Home</a>
-        <a href="{{ url_for('view_list') }}">List</a>
-        <a href="{{ url_for('view_all_recipes') }}">Recipe</a>
+        <a href="{{ url_for('view_index') }}">Home</a> |
+        <a href="{{ url_for('view_list') }}">List</a> |
+        <a href="{{ url_for('view_all_recipes') }}">Recipe</a> |
         <a href="{{ url_for('new_recipe') }}">NewRecipe</a>
     </div>
+    <hr />
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flashes">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </body>
 </html>
