--- a/src/shopping_list/templates/recipe_single.html
+++ b/src/shopping_list/templates/recipe_single.html
@@ -14,6 +14,7 @@
 
 {% block content %}
     <form method="post" action="" id="recipe_single">
+        {{ form.hidden_tag() }}
         <p>{{ form.title(style="font-size: 18; font-weight: bold") }}</p>
         <input type="submit" name="submit" value="SAVE RECIPE" />
         <br />
